--- a/Animated_Line_Graph.ipynb
+++ b/Animated_Line_Graph.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data =  pd.read_csv('covid.csv')"
+    "data =  pd.read_csv('https://raw.githubusercontent.com/microsoft/Bing-COVID-19-Data/master/data/Bing-COVID19-Data.csv')"
    ]
   },
   {
